Fix: galery animation on ios

--- a/src/sections/galery/Galery.module.css
+++ b/src/sections/galery/Galery.module.css
@@ -39,12 +39,12 @@
 
 	.image {
 		width: clamp(15rem, 13.875rem + 5vw, 21.875rem);
-		height: 100%;
+		/* height: clamp(25rem, 21.6667rem + 5.2083vw, 30rem); */
 
 		img {
 			border-radius: 0.5rem;
 			object-fit: cover;
-			height: 100%;
+			/* height: 100%; */
 		}
 	}
 }
